Update and rename index.html.txt to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Static Website</title>
+    <title>360 Expressions</title>
   </head>
   <body>
     <h1>This Is Me</h1>
