link js and css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>360 Expressions</title>
+    	<title>360 Expressions</title>
+	<script src="script.js"></script>
+	<link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>This Is Me</h1>
