--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     	<title>360 Expressions</title>
-	<script src="script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	<link rel="stylesheet" href="style.css">
   </head>
   <body>
