--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <body>
 <svg height="720" width="720">
-<a xlink:href="day1/index.html" xlink:title="Day 1" show="embed">
-<polygon points="720,360 720,354 360,360" stroke="blue" stroke-width="1" fill="orange"/>
+<a xlink:href="day1/index.html" xlink:title="Day 1" target="_blank">
+<polygon points="720,360 720,354 360,360" stroke="blue" stroke-width="3" fill="orange"/>
 </a>
-<a xlink:href="day2/index.html" xlink:title="Day 2">
+<a xlink:href="day2/index.html" xlink:title="Day 2" target="popup" 
+  onclick="window.open('day2/index.html','popup','width=720,height=720'); return false;">
 <polygon points="720,354 720,348 360,360" stroke="blue" stroke-width="1" fill="orange"/>
 </a>
 <a xlink:href="day3/index.html" xlink:title="Day 3">
@@ -13,7 +14,7 @@
 <a xlink:href="day4/index.html" xlink:title="Day 4">
 <polygon points="720,342 720,335 360,360" stroke="blue" stroke-width="1" fill="orange"/>
 </a>
-<a xlink:href="index.html" xlink:title="click to see">
+<a xlink:href="day5/index.html" xlink:title="Day 5">
 <polygon points="720,335 719,329 360,360" stroke="blue" stroke-width="1" fill="orange"/>
 </a>
 <a xlink:href="index.html" xlink:title="click to see">
