--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <body>
 <svg height="720" width="720">
 <a xlink:href="day1/index.html" xlink:title="Day 1" target="_blank">
-<polygon points="720,360 720,354 360,360" stroke="blue" stroke-width="3" fill="orange"/>
+<polygon points="720,360 720,354 360,360" stroke="blue" stroke-width="2" fill="yellow"/>
 </a>
 <a xlink:href="day2/index.html" xlink:title="Day 2" target="popup" 
   onclick="window.open('day2/index.html','popup','width=720,height=720'); return false;">
-<polygon points="720,354 720,348 360,360" stroke="blue" stroke-width="1" fill="orange"/>
+<polygon points="720,354 720,348 360,360" stroke="blue" stroke-width="1" fill="yellow"/>
 </a>
 <a xlink:href="day3/index.html" xlink:title="Day 3">
-<polygon points="720,348 720,342 360,360" stroke="blue" stroke-width="1" fill="orange"/>
+<polygon points="720,348 720,342 360,360" stroke="blue" stroke-width="1" fill="yellow"/>
 </a>
 <a xlink:href="day4/index.html" xlink:title="Day 4">
-<polygon points="720,342 720,335 360,360" stroke="blue" stroke-width="1" fill="orange"/>
+<polygon points="720,342 720,335 360,360" stroke="blue" stroke-width="1" fill="yellow"/>
 </a>
 <a xlink:href="day5/index.html" xlink:title="Day 5">
-<polygon points="720,335 719,329 360,360" stroke="blue" stroke-width="1" fill="orange"/>
+<polygon points="720,335 719,329 360,360" stroke="blue" stroke-width="1" fill="yellow"/>
 </a>
-<a xlink:href="index.html" xlink:title="click to see">
-<polygon points="719,329 719,323 360,360" stroke="blue" stroke-width="1" fill="orange"/>
+<a xlink:href="day6/index.html" xlink:title="Day 6">
+<polygon points="719,329 719,323 360,360" stroke="blue" stroke-width="1" fill="yellow"/>
 </a>
 <a xlink:href="index.html" xlink:title="click to see">
 <polygon points="719,323 718,317 360,360" stroke="blue" stroke-width="1" fill="orange"/>
